--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7"
+  },
+  "devDependencies": {
+    "forever": "^0.15.1"
   }
 }
