--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
+    "pathfinding": "^0.4.17",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7"
   },
