--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "js-object-clone": "^0.4.2",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
     "pathfinding": "^0.4.17",
